--- a/views/admin/info_empleados.html
+++ b/views/admin/info_empleados.html
@@ -28,7 +28,9 @@
                     reportes generales de actividad.</h6>
             </div>
         </div>
-        <h3 class="fw-bold "> </h3>
+        <button type="button" class="btn btn-light fs-3" onclick="window.location.href='../admin/'">
+            <i class="bi bi-person-vcard-fill me-1"></i>Información personal empleados
+        </button>
         <!-- ? Formulario de búsqueda -->
         <div class="row">
             <form class="col-sm-12 col-md-12 col-lg-10" id="searchForm">
