--- a/views/admin/info_empleados.html
+++ b/views/admin/info_empleados.html
@@ -28,7 +28,7 @@
                     reportes generales de actividad.</h6>
             </div>
         </div>
-        <button type="button" class="btn btn-light fs-3" onclick="window.location.href='../admin/'">
+        <button type="button" class="btn btn-light fs-3" onclick="window.location.href='../admin/empleados.html'">
             <i class="bi bi-person-vcard-fill me-1"></i>Información personal empleados
         </button>
         <!-- ? Formulario de búsqueda -->
