inicio de jornada laboral terminada con exit. CAMBIOS: -Botones en patalla de inicio de empleados con al funcionalidad de iniciar y terminar la h¿jornada laboral. - se agrego un nuevo validador de datos numericos (negativos, puntos, comas y numeros) - funcion en los botones de inicio y final de jornada laboral desabilitado y abilitado  al igual que el cambio de color (EN PROCESO)

--- a/views/admin/info_empleados.html
+++ b/views/admin/info_empleados.html
@@ -39,7 +39,7 @@
                         <input type="search" class="form-control custom-input border-2" id="search" name="search"
                             placeholder="Buscador..." required>
                     </div>
-                    <div class="col-lg-5 col-md-9 col-sm-9 d-flex flex-row align-items-center gap-2 mt-5">
+                    <div class="col-lg-8 col-md-9 col-sm-9 d-flex flex-row align-items-center gap-2 mt-5">
                         <div class="btn-group">
                             <button type="submit" class="btn btn-success">
                                 <i class="bi bi-search"></i>
@@ -80,6 +80,7 @@
                                 <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 5)">Inactivo</a></li>
                             </ul>
                         </div>
+                        <button type="button" class="btn btn-secondary" onclick="openLocation()">Filtrar por zona</button>
                     </div>
                 </div>
             </form>
