--- a/views/admin/inicio.html
+++ b/views/admin/inicio.html
@@ -28,57 +28,14 @@
                     <canvas id="grafica3"></canvas>
                 </div>
             </div>
-            <div class="mt-2row justify-content-center text-center">
+            <div class="mt-2 row justify-content-center text-center">
                 <h1 class="">Jornadas laboral</h1>
+                <div class="my-4">
+                    <button type="button" class="btn btn-secondary" id="inicioBoton" onclick="inicioJornadas()"><h3>Inicios Recientes</h3></button>
+                    <button type="button" class="btn btn-secondary" id="finalizacionBoton" onclick="finalizacionJornadas()"><h3>Finalizaciones Recientes</h3></button>
+                </div>
                 <div class="col-lg-6 col-12">
-                    <div class="accordion accordion-flush" id="accordionFlushExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                    aria-controls="flush-collapseOne">
-                                    Accordion Item #1
-                                </button>
-                            </h2>
-                            <div id="flush-collapseOne" class="accordion-collapse collapse"
-                                data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                    demonstrate the <code>.accordion-flush</code> class. This is the first item's
-                                    accordion body.</div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                    aria-controls="flush-collapseTwo">
-                                    Accordion Item #2
-                                </button>
-                            </h2>
-                            <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                                data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                    demonstrate the <code>.accordion-flush</code> class. This is the second item's
-                                    accordion body. Let's imagine this being filled with some actual content.</div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                    aria-controls="flush-collapseThree">
-                                    Accordion Item #3
-                                </button>
-                            </h2>
-                            <div id="flush-collapseThree" class="accordion-collapse collapse"
-                                data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                    demonstrate the <code>.accordion-flush</code> class. This is the third item's
-                                    accordion body. Nothing more exciting happening here in terms of content, but just
-                                    filling up the space to make it look, at least at first glance, a bit more
-                                    representative of how this would look in a real-world application.</div>
-                            </div>
-                        </div>
+                    <div class="accordion" id="jornadasEmpleados">
                     </div>
                 </div>
                 <div class="col-lg-6 col-12">
@@ -101,7 +58,6 @@
     <!-- Llamada al controlador de la página web -->
     <script src="../../controllers/admin/inicio.js"></script>
     <!-- ! cambiar el link js para el controntrolador -->
-
 </body>
 
 </html>
