--- a/views/admin/duplas.html
+++ b/views/admin/duplas.html
@@ -82,7 +82,8 @@
                                 Filtrar por tipo
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 6)">Permanente</a></li>
+                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 6)">Permanente</a>
+                                </li>
                                 <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 7)">Temporal</a>
                                 </li>
                             </ul>
@@ -153,20 +154,44 @@
                             <div class="">
                                 <div class="col-12">
                                     <h3>Datos generales</h3>
-                                    <div class="row d-flex justify-content-center align-items-center mb-3">
-                                        <div class="col-4">
-                                            <label for="nombreDupla" class="form-label">Nombre de dupla</label>
-                                            <input type="text" class=" form-control" id="nombreDupla" name="nombreDupla"
-                                                placeholder="Ingrese un nombre..." required>
-                                        </div>
-                                        <h3 class=""></h3>
-                                        <div class="col-4">
-                                            <label for="telefonoDupla" class="form-label">Teléfono de dupla</label>
-                                            <input type="text" class=" form-control" id="telefonoDupla"
-                                                name="telefonoDupla" placeholder="Ingrese un numero valido..."
-                                                oninput="formatPhoneNumber(this)" required>
+                                    <div class="my-4">
+                                        <div class="row justify-content-center">
+                                            <!-- Input de Usuario en una columna completa -->
+                                            <div class="col-12 col-md-6 col-lg-4 mb-3">
+                                                <label for="usuarioDupla" class="form-label">Nombre dupla</label>
+                                                <input type="text" class="form-control" id="usuarioDupla"
+                                                    name="usuarioDupla" placeholder="Ingrese un número válido..."
+                                                    required>
+                                            </div>
+
+                                            <!-- Claves en la misma fila -->
+                                            <div class="col-12" id="claveDupla">
+                                                <div class="row justify-content-center">
+                                                    <div class="col-6 col-md-3 mb-3">
+                                                        <label for="claveDupla" class="form-label">Clave</label>
+                                                        <input type="password" class="form-control" id="claveDupla"
+                                                            name="claveDupla" placeholder="Ingrese su clave..."
+                                                            required>
+                                                    </div>
+
+                                                    <div class="col-6 col-md-3 mb-3">
+                                                        <label for="claveDupla2" class="form-label">Repetir
+                                                            Clave</label>
+                                                        <input type="password" class="form-control" id="claveDupla2"
+                                                            name="claveDupla2" placeholder="Repita su clave..."
+                                                            required>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-4">
+                                                <label for="telefonoDupla" class="form-label">Teléfono de dupla</label>
+                                                <input type="text" class=" form-control" id="telefonoDupla"
+                                                    name="telefonoDupla" placeholder="Ingrese un numero valido..."
+                                                    oninput="formatPhoneNumber(this)" required>
+                                            </div>
                                         </div>
                                     </div>
+                                    <hr>
                                     <h3>Tipo dupla</h3>
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="tipoDupla" id="tipoDupla1"
@@ -201,8 +226,7 @@
                                     <div class="row d-flex justify-content-center align-items-center mb-3">
                                         <div class="col-6">
                                             <h5 for="dumplaEmpleado" class="text-white">Seleccionar empleado</h5>
-                                            <select id="duplaEmpleado1" name="duplaEmpleado1" class="form-select "
-                                                required>
+                                            <select id="duplaEmpleado1" name="duplaEmpleado1" class="form-select ">
                                             </select>
                                         </div>
                                     </div>
@@ -223,20 +247,17 @@
                                     <div class="row d-flex justify-content-center align-items-center mb-3">
                                         <div class="col-6">
                                             <h5 for="dumplaEmpleado" class="text-white">Seleccionar empleado</h5>
-                                            <select id="duplaEmpleado2" name="duplaEmpleado2" class="form-select "
-                                                required>
+                                            <select id="duplaEmpleado2" name="duplaEmpleado2" class="form-select ">
                                             </select>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                             <button type="submit" class="btn btn-primary ps-4 pe-4">
                                 <i class="bi bi-person-fill-add me-1"></i> Aceptar
                             </button>
                         </form>
                     </div>
-
                 </div>
             </div>
         </div>
